Port to Minecraft 1.21.4
- Split PeripheralScreen into per-tab classes (LogTab, ScriptsTab,
  SettingsTab, StoreTab, BuildTab) for maintainability
- Rewrite mouse handlers from Click record API (1.21.9+) back to
  (double mouseX, double mouseY, int button) signatures
- Rewrite keyPressed/charTyped from KeyInput/CharInput records back to
  (int keyCode, int scanCode, int modifiers) / (char chr, int modifiers)
- Replace PlayerInventory.getMainStacks()/getSelectedSlot() with .main/.selectedSlot fields
- Replace CommandManager.parseAndExecute() with executeWithPrefix()
- Replace ClickEvent/HoverEvent nested record constructors with legacy
  ClickEvent(Action, String) / HoverEvent(Action, Text) constructors
- Replace KeyBinding.Category.GAMEPLAY with "key.categories.gameplay" string
- Replace GameProfile.name() with getName()
- Remove NavigatorInput.movementVector (Vec2f field added in 1.21.11)
- Remove Input.movementVector access widener entry
- Update gradle.properties: minecraft 1.21.4, yarn 1.21.4+build.8,
  fabric-api 0.119.4+1.21.4, modmenu 13.0.0
- Update fabric.mod.json minecraft constraint to ~1.21.4
- Port all reliability and maintainability fixes from main

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>